feat: add codi, gouo, indentline, surround, autosave, git gutter and polyglot plugins

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,5 +1,6 @@
 {
   "tsserver.maxTsServerMemory": 300,
+  "suggest.noselect": false,
   "javascript.validate.enable": false,
   "typescript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyBraces": true,
   "languageserver": {
